--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon removed - vite.svg was causing 404 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Offline-first personal trainer and fitness tracker" />
     <meta name="theme-color" content="#3b82f6" />
